[tool.poetry]
name = "kubeseal-auto"
version = "0.2.3"
description = "An interactive wrapper for kubeseal binary"
authors = ["Vadim Gedz <vadims@linux-tech.io>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/shini4i/kubeseal-auto"
homepage = "https://github.com/shini4i/kubeseal-auto"

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^23.3.0"
click = "^8.1.2"
questionary = "^1.10.0"
icecream = "^2.1.2"
PyYAML = "^6.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kubeseal-auto = "kubeseal_auto.cli:cli"
