[tool.poetry]
name = "kubeseal-auto"
version = "0.5.0"
description = "An interactive wrapper for kubeseal binary"
authors = ["Vadim Gedz <vadims@linux-tech.io>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/shini4i/kubeseal-auto"
homepage = "https://github.com/shini4i/kubeseal-auto"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
requests = "^2.28.1"
kubernetes = "^29.0.0"
click = "^8.1.7"
icecream = "^2.1.3"
questionary = "^2.0.1"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kubeseal-auto = "kubeseal_auto.cli:cli"
